--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -28,6 +28,7 @@
   .footer{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
   }
 
   .footer div{
@@ -36,13 +37,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-
   }
 
   .copyright{
     display: inline-block;
     width: 300px;
-    align-self: flex-start;
-  
+    margin-top: 2rem;
   }
 }
