--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -128,7 +128,7 @@
     display: block;
     text-align: right;
     width: 100%;
-    font-size: 1.8rem;
+    font-size: 3rem;
     font-weight: 700;
     margin-right: 1rem;
     margin-bottom: 16rem;
@@ -139,7 +139,7 @@
     text-align: right;
     color: white;
     width: 100%;
-    font-size: 1.8rem;
+    font-size: 3rem;
     font-weight: 700;
     margin-right: 1rem;
     margin-top: 2rem;
@@ -163,7 +163,7 @@
     display: flex;
     justify-content: space-between;
     background-color: rgba(255, 255, 255, 0.722);
-    padding: 1rem 2rem;
+    padding: 2rem 3rem;
     border-radius: 50px;
     margin-top: 6rem;
   }
@@ -177,7 +177,7 @@
   .home_search_prod_by_date input {
     width: 150px;
     border: 0;
-    height: 2rem;
+    height: 3rem;
     border: 1px solid #0D83AB;
     border-radius: 5px;
   }
@@ -186,14 +186,14 @@
     text-transform: uppercase;
     color: black;
     font-weight: 700;
-    font-size: 0.8rem;
+    font-size: 1.3rem;
   }
 
   .home_search_prod_by_date button {
     padding: 0;
-    height: 2.5rem;
+    height: 4rem;
+    width: 100px;
     align-self: flex-end;
-    padding: 0 0.5rem;
     background-color: #0D83AB;
     color: white;
     font-weight: 700;
@@ -209,6 +209,8 @@
 
   .home_products h2 {
     width: 100%;
+    font-size: 4rem;
+    margin: 3rem;
   }
 
   .home .card_product {
@@ -219,6 +221,7 @@
 
   .home_infos_one h2 {
     width: 100%;
+    font-size: 3rem;
   }
 
   .home_infos_one {
@@ -237,7 +240,7 @@
     align-items: center;
     justify-content: flex-start;
     color: white;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     text-align: center;
   }
 
