--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -39,12 +39,6 @@
   font-weight: 700;
 }
 
-.home .card_product {
-  width: 80%;
-  margin: 1rem auto;
-  padding: 1rem;
-}
-
 .home_infos_one {
   background-image: url('../../assets/images/img_home_mobile_info1.jpg');
   height: 100vh;
@@ -60,19 +54,19 @@
 .home_infos_one div {
   width: 100%;
   display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    color: white;
-    font-size: 1.5rem;
-    text-align: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  color: white;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .home_infos_one div img {
   width: 100px;
 }
 
-.home_infos_one span{
+.home_infos_one span {
   font-size: 1.8rem;
   font-weight: bold;
 }
@@ -214,8 +208,8 @@
   }
 
   .home .card_product {
-    width: 20%;
-    margin: 1rem auto;
+
+    margin: 1rem;
     padding: 1rem;
   }
 
@@ -244,7 +238,7 @@
     text-align: center;
   }
 
-  .home_infos_one span{
+  .home_infos_one span {
     font-size: 1.8rem;
     font-weight: bold;
   }
