--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -27,6 +27,11 @@
   font-family: "Poppins";
   font-weight: 500;
 }
+.logOut {
+  padding: 43px 5px !important;
+  color: #000;
+  font-size: 2rem;
+}
 .navbar-shrink {
   background-color: #f8f8f8af;
   height: 8rem !important;
