--- a/src/components/LogIn/login.css
+++ b/src/components/LogIn/login.css
@@ -1,8 +1,38 @@
-.login {
+.login_container{
+  width: 100%;
+  display: flex;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
+  justify-content: center;
+  margin-top: 20rem;
+  z-index: 100;
 }
 
+.login label {
+  display: none;
+}
+
+
+.login div {
+ margin-bottom: 1rem !important;
+}
+
+.login button {
+  font-size: 1.5rem;
+ }
+
+
+.login button {
+  width: 20rem;
+ }
+
+
+
+@media (min-width: 700px) {
+  .login_container{
+    width: 100%;
+    display: flex;
+    position: absolute;
+    justify-content: flex-end;
+    margin-top: 8rem;
+  }
+}
