--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -213,39 +213,48 @@
     padding: 1rem;
   }
 
-  .home_infos_one h2 {
-    width: 100%;
-    font-size: 3rem;
-  }
-
-  .home_infos_one {
-    background-image: url('../../assets/images/ski.png');
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    margin-bottom: 3rem;
-    min-height: 0;
-  }
-
-  .home_infos_one div {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    color: white;
-    font-size: 2.5rem;
-    text-align: center;
-  }
-
-  .home_infos_one span {
-    font-size: 1.8rem;
-    font-weight: bold;
-  }
-
-  .home_infos_one div img {
-    width: 150px;
-  }
+  /* ----- SECTION SERVICE -----  */
+.homeService{
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+.homeService .container, .homeService h3{
+  z-index: 10;
+}
+.bg-img-fixed{
+  height: 40rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url('../../assets/images/ski2.png');
+  background-attachment: fixed;
+  position: relative;
+}
+.homeService h3 {
+  font-size: 3rem;
+  font-weight: 700;
+  text-align: center;
+}
+.homeService h4{
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+.bg-img-fixed span{
+  content: '';
+  position: absolute;
+  background-color: #081b2f;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40rem;
+  overflow: hidden;
+  opacity: .5;
+}
+.homeService img{
+    width: 10rem;
+    margin-bottom: 2rem !important;
+}
+/* ------------------ */
 
   .full_skieur {
     display: block;
