--- a/src/components/ProductCart/ProductCart.css
+++ b/src/components/ProductCart/ProductCart.css
@@ -28,7 +28,7 @@
     padding: 0.1rem;
   }
 
-  .qtyProduct{
+  .qtyInCartProduct{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -82,7 +82,7 @@
     padding: 0.1rem;
   }
 
-  .qtyProduct{
+  .qtyInCartProduct{
     display: flex;
     flex-direction: row;
     justify-content: center;
