:technologist: Creation pdf facture

--- a/src/pages/OrderDetails/order.css
+++ b/src/pages/OrderDetails/order.css
@@ -4,18 +4,56 @@ margin-bottom: 10rem;
 }
 
 .orderPriceContainer {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: end;
+  position: relative;
+  right: 3rem;
+}
+
+.orderPrice{
+  padding: 0 2rem ;
+  border-top: 2px solid #767676;
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
+.printBill{
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: end;
+  position: relative;
+  top: 2rem;
+  right: 3rem;
+}
+
+@media screen and (min-width: 577px){ /* version tablette & desktop */
+.orderPriceContainer {
+  width: 80%;
   margin: 0 auto;
   display: flex;
   justify-content: end;
 }
 
-@media screen and (min-width: 577px){ /* version tablette & desktop */
-.orderPriceContainer {
-  width: 60%;
+.orderPrice{
+  padding: 0 2rem ;
+  border-top: 2px solid #767676;
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
+.printBill{
+  width:80%;
   margin: 0 auto;
   display: flex;
   justify-content: end;
+  position: relative;
+  top: 2rem;
+  right: 0;
 }
+
 }
 
 @media screen and (min-width: 1024px){ /* version desktop */
@@ -28,5 +66,15 @@ margin-bottom: 10rem;
     border-top: 2px solid #767676;
     font-weight: bold;
     font-size: 2.5rem;
+  }
+
+  .printBill{
+    width:60%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: end;
+    position: relative;
+    top: 2rem;
+   
   }
 }
