:lipstick: Upload image produit

--- a/src/pages/OrderDetails/order.css
+++ b/src/pages/OrderDetails/order.css
@@ -3,22 +3,15 @@ margin-top: 15rem;
 margin-bottom: 10rem;
 }
 
-.orderPriceContainer {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: end;
-  position: relative;
-  right: 3rem;
-}
 
-.orderPrice{
+.orderPrice p{
   padding: 0 2rem ;
   border-top: 2px solid #767676;
   font-weight: bold;
   font-size: 2.5rem;
 }
 
+.orderPrice,
 .printBill{
   width: 100%;
   margin: 0 auto;
@@ -30,20 +23,15 @@ margin-bottom: 10rem;
 }
 
 @media screen and (min-width: 577px){ /* version tablette & desktop */
-.orderPriceContainer {
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: end;
-}
 
-.orderPrice{
-  padding: 0 2rem ;
+
+.orderPrice p{
   border-top: 2px solid #767676;
   font-weight: bold;
   font-size: 2.5rem;
 }
 
+.orderPrice,
 .printBill{
   width:80%;
   margin: 0 auto;
@@ -57,19 +45,17 @@ margin-bottom: 10rem;
 }
 
 @media screen and (min-width: 1024px){ /* version desktop */
-  .orderPriceContainer {
-    width: 60%;
-  }
+  
 
-  .orderPrice{
-    padding: 0 2rem ;
+  .orderPrice p{
     border-top: 2px solid #767676;
     font-weight: bold;
     font-size: 2.5rem;
   }
 
+  .orderPrice,
   .printBill{
-    width:60%;
+    width:70%;
     margin: 0 auto;
     display: flex;
     justify-content: end;
@@ -78,3 +64,20 @@ margin-bottom: 10rem;
    
   }
 }
+  @media screen and (min-width: 1439px){ /* version desktop */  
+    .orderPrice p{
+      border-top: 2px solid #767676;
+      font-weight: bold;
+      font-size: 2.5rem;
+    }
+    .orderPrice,
+    .printBill{
+      width:60%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: end;
+      position: relative;
+      top: 2rem;
+     
+    }
+  }
